--- a/cart.html
+++ b/cart.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="bootstrap-3.3.6-dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="libs/bootstrap-3.3.6-dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/general-style.css">
-  <link rel="stylesheet" type="text/css" href="js/owl.carousel.2.0.0-beta.2.4/assets/owl.carousel.css">       
-  <link type="text/css" href="font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">       
+  <link type="text/css" href="fonts/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="css/own-style.css">
-  <script src="js/jquery-2.2.3.js"></script>
-  <script src="js/owl.carousel.2.0.0-beta.2.4/owl.carousel.js"></script> 
+  <script src="libs/jquery-2.2.3.js"></script>
+  <script src="libs/owl.carousel.min.js"></script> 
 </head>
 
 <body>
@@ -387,6 +387,6 @@
         }
     })
 </script>
-<script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+<script src="libs/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
